# apps/api/src/db/surau.ts
@@ -1,10 +1,12 @@
 import knexPg from ".";
-import { Surau } from "../types/surau";
+import { Surau, SurauPhoto } from "../types/surau";
 
 export const getAllSurau = async (): Promise<Surau[]> => {
   try {
+    let surau: Surau[] = []
     const surauData: Surau[] = await knexPg<Surau[]>("Surau")
       .select(
+        "Surau.id as id",
         "Surau.name as name",
         "Surau.unique_name as unique_name",
         "Surau.is_approved",
@@ -13,12 +15,24 @@ export const getAllSurau = async (): Promise<Surau[]> => {
         "Surau.brief_direction",
         "State.name as state",
         "District.name as district",
-        "Mall.name as mall"
+        "Mall.name as mall",
       )
       .leftJoin("State", "Surau.state_id", "State.id")
       .leftJoin("District", "Surau.district_id", "District.id")
       .leftJoin("Mall", "Surau.mall_id", "Mall.id");
-    return surauData;
+     
+      for(const data of surauData){
+        if(data) {
+          const surauPhoto = await knexPg<SurauPhoto>("SurauPhoto")
+          .select("file_path")
+          .where("surau_id", data.id)
+          surau.push({
+            ...data,
+            surau_photos: surauPhoto
+          })
+        }
+      }
+    return surau;
   } catch (err: any) {
     console.log(err);
     return err;
@@ -27,7 +41,6 @@ export const getAllSurau = async (): Promise<Surau[]> => {
 
 export const getSurau = async (id: string): Promise<Surau> => {
   try {
-    console.log(id)
     const surauData: any = await knexPg<any>("Surau")
       .where("unique_name", id)
       .select(
@@ -59,7 +72,7 @@ export const addSurau = async (surau: Surau): Promise<Surau> => {
       user_id: surau?.user_id,
       is_solat_jumaat: surau?.is_solat_jumaat,
     });
-    console.log(surauData);
+ 
     return surauData;
   }catch(err: any){
     console.log(err)
@@ -68,12 +81,18 @@ export const addSurau = async (surau: Surau): Promise<Surau> => {
 };
 
 export const updateSurau = async (id: string): Promise<Surau[]> => {
-  const surauData: Surau[] = await knexPg<Surau[]>("Surau")
+  try{
+    const surauData: Surau[] = await knexPg<Surau[]>("Surau")
     .where("unique_name", id)
     .update("is_approved", true);
 
   console.log(surauData);
+  
   return surauData;
+  }catch(err: any){
+    console.log(err)
+    return err
+  }
 };
 
 export const removeSurau = async (id: string): Promise<Surau[]> => {
@@ -81,6 +100,5 @@ export const removeSurau = async (id: string): Promise<Surau[]> => {
     .where("unique_name", id)
     .del();
 
-  console.log(surauData);
   return surauData;
 };
