# apps/api/src/types/surau.ts
@@ -1,4 +1,5 @@
 export type Surau = {
+    id: string
     name: string
     unique_name: string
     is_approved: boolean
@@ -11,4 +12,9 @@ export type Surau = {
     is_qiblat_certified: boolean
     user_id: string
     is_solat_jumaat: boolean
+    surau_photos: SurauPhoto[]
 } | undefined
+
+export type SurauPhoto = {
+    file_path: string
+}
